--- a/index.html
+++ b/index.html
@@ -867,36 +867,28 @@
 
           <div class="teachers-row w-full flex items-center justify-between">
             <div
-              style="
-                background-image: url('../src/img/section-third/image-01.png');
-              "
+              style="background-image: url('./img/section-third/image-01.png')"
               class="teacher-card w-4/12 flex flex-col items-center justify-end"
             >
               <p class="text">Ліза</p>
             </div>
 
             <div
-              style="
-                background-image: url('../src/img/section-third/image-02.png');
-              "
+              style="background-image: url('./img/section-third/image-02.png')"
               class="teacher-card w-4/12 flex flex-col items-center justify-end"
             >
               <p class="text">Юлія</p>
             </div>
 
             <div
-              style="
-                background-image: url('../src/img/section-third/image-03.png');
-              "
+              style="background-image: url('./img/section-third/image-03.png')"
               class="teacher-card w-4/12 flex flex-col items-center justify-end"
             >
               <p class="text">Дмитро</p>
             </div>
 
             <div
-              style="
-                background-image: url('../src/img/section-third/image-01.png');
-              "
+              style="background-image: url('./img/section-third/image-01.png')"
               class="teacher-card w-4/12 flex flex-col items-center justify-end"
             >
               <p class="text">Поліна</p>
@@ -916,9 +908,7 @@
 
         <div class="row flex items-center justify-between w-full">
           <div
-            style="
-              background-image: url('../src/img/section-fivth/image-01.png');
-            "
+            style="background-image: url('./img/section-fivth/image-01.png')"
             class="video flex items-center justify-center"
           >
             <img
@@ -929,9 +919,7 @@
           </div>
 
           <div
-            style="
-              background-image: url('../src/img/section-fivth/image-02.png');
-            "
+            style="background-image: url('./img/section-fivth/image-02.png')"
             class="video flex items-center justify-center"
           >
             <img
@@ -942,9 +930,7 @@
           </div>
 
           <div
-            style="
-              background-image: url('../src/img/section-fivth/image-03.png');
-            "
+            style="background-image: url('./img/section-fivth/image-03.png')"
             class="video flex items-center justify-center"
           >
             <img
